# cmake_lab_3

./: README.md
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_ex_lib/xyi/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
hello_world_application/: Cmakelists.txt
