cmake_minimum_required(VERSION 3.4)
project(formatter_lib_ex)
set(CMAKE_CXX_STANDARD  14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB
        CPP "*.cpp")
add_executable(${PROJECT_NAME} ${CPP})
add_library(lib_formatter_ex STATIC ${CMAKE_CURRENT_DIR} ${CPP})
add_subdirectory(${CMAKE_CURRENT_DIR}/../formatter_lib formatter_lib) 
target_link_libraries(${PROJECT_NAME} PUBLIC formatter_lib)
